--- a/README.adoc
+++ b/README.adoc
@@ -12,14 +12,14 @@ You can deploy the application using the OpenShift client (`oc`) with the follow
 [source]
 ----
 # Create a new OpenShift project
-$ oc new-project mydemo
+$ oc new-project fist-netcore-app
 
 # Add the .NET Core application
-$ oc new-app dotnet:7.0-ubi8~https://github.com/redhat-developer/s2i-dotnetcore-ex#dotnet-7.0 --context-dir app
+$ oc new-app dotnet:7.0-ubi8~https://github.com/granderamirez6/FirstExampleNETCore --context-dir app
 
 # Make the .NET Core application accessible externally and show the url
-$ oc expose service s2i-dotnetcore-ex
-$ oc get route s2i-dotnetcore-ex
+$ oc expose service first-netcore-app
+$ oc get route first-netcore-app
 ----
 
 == Copyright and License
